Fix overflow scroll (#32)

--- a/frontend/src/components/Home/Feed/Feed.css
+++ b/frontend/src/components/Home/Feed/Feed.css
@@ -8,7 +8,6 @@
   font-family: "Asap", sans-serif;
   color: #505050;
   font-weight: bold;
-  margin-left: -18px;
 }
 
 .feed__filter--button {
