--- a/frontend/src/components/Home/Friends/Cards.css
+++ b/frontend/src/components/Home/Friends/Cards.css
@@ -4,6 +4,7 @@
   height: 30vh;
   border-radius: 15px;
   box-shadow: 0px 0px 7px rgba(129, 129, 129, 0.12);
+  margin-top: 16%;
 }
 
 .cards__profile-wrapper {
